# AI-Mental-Health-Chatbot

./: README.md  frontend.py  medical-data-fine-tuning.ipynb  pyproject.toml
backend/: ai_agent.py  config.py  main.py  tools.py
