[project]
name = "ai-medical-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.29",
    "langgraph>=0.6.4",
    "ollama>=0.5.3",
    "pydantic>=2.11.7",
    "pypdf>=6.0.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "streamlit>=1.48.0",
    "twilio>=9.7.0",
    "uvicorn>=0.35.0",
]
